Commit at 04 Jun 2014

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,7 +2,7 @@
 	email = andrefarzat@gmail.com
 	name = Andre Farzat
 [alias]
-	addremove = add -A
+	addremove = add --all :/ 
 [push]
 	default = simple
 [core]
