--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -7,9 +7,15 @@
 	default = simple
 [core]
 	excludesfile = /Users/andrefarzat/.gitignore_global
-[difftool "sourcetree"]
-	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path = 
+#[difftool "sourcetree"]
+	#cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	#path = 
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[filter "media"]
+	clean = git-media-clean %f
+	smudge = git-media-smudge %f
