--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,20 +2,17 @@
 	email = andrefarzat@gmail.com
 	name = Andre Farzat
 [alias]
-	addremove = add --all :/ 
+	addremove = add --all :/
 [push]
 	default = simple
 [core]
 	excludesfile = /Users/andrefarzat/.gitignore_global
-#[difftool "sourcetree"]
-	#cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	#path = 
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path = 
+	path =
 [filter "media"]
 	clean = git-media-clean %f
 	smudge = git-media-smudge %f
@@ -23,3 +20,27 @@
 	clean = git-lfs clean %f
 	smudge = git-lfs smudge %f
 	required = true
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
+[color]
+	ui = always
+	added = yellow
+	changed = green
+	untracked = cyan
+[color "diff"]
+	meta = yellow bold
+	commit = green bold
+	frag = magenta bold
+	old = red bold
+	new = green bold
+	whitespace = red reverse
+[color "branch"]
+	current = yellow reverse
+	local = yellow
+	remote = green
+[pager]
+	diff = diff-so-fancy | less --tabs=4 -RFX
+	show = diff-so-fancy | less --tabs=4 -RFX
